--- a/dashboard.html
+++ b/dashboard.html
@@ -1,17 +1,18 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <title>Panel - Estudiantes</title>
+  <meta charset="UTF-8" />
+  <title>Panel de Estudiantes</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
 </head>
 <body>
   <div class="container">
-
     <h1>Panel de Estudiantes</h1>
-<button onclick="cerrarSesion()" class="cerrar-btn">Cerrar sesión</button>
-  
+    <button onclick="cerrarSesion()" class="cerrar-btn">Cerrar sesión</button>
+
+    <!-- Registrar estudiante -->
     <section class="card">
       <h2>Registrar estudiante</h2>
       <input type="text" id="nombre" placeholder="Nombre del estudiante" />
@@ -20,27 +21,26 @@
       <button onclick="agregarEstudiante()">Agregar</button>
     </section>
 
-   
+    <!-- Lista de estudiantes -->
     <section class="card">
       <h2>Lista de estudiantes</h2>
       <ul id="lista-estudiantes"></ul>
     </section>
 
+    <!-- Subir archivos -->
     <section class="card">
       <h2>Subir archivo</h2>
-      <label for="estudiante">Selecciona un estudiante:</label>
-      <select id="estudiante"></select><br /><br />
-
       <input type="file" id="archivo" />
       <button onclick="subirArchivo()">Subir</button>
     </section>
 
+    <!-- Archivos subidos -->
     <section class="card">
       <h2>Archivos subidos</h2>
       <ul id="lista-archivos"></ul>
     </section>
+  </div>
 
-    </div>
   <script src="js/dashboard.js"></script>
 </body>
 </html>
