--- a/dashboard.html
+++ b/dashboard.html
@@ -33,6 +33,7 @@
       <h2>Subir archivo</h2>
       <input type="file" id="archivo" />
       <button onclick="subirArchivo()">Subir</button>
+      <button onclick="cancelarCarga()" id="cancelarBtn" style="display:none;">Cancelar</button>
     </section>
 
     <!-- Archivos subidos -->
