--- a/dashboard.html
+++ b/dashboard.html
@@ -13,13 +13,16 @@
     <h1>Panel de Estudiantes</h1>
     <button onclick="cerrarSesion()" class="cerrar-btn">Cerrar sesión</button>
 
-    <!-- Registrar estudiante -->
+    <!-- Registrar / Editar estudiante -->
     <section class="card">
-      <h2>Registrar estudiante</h2>
+      <h2 id="form-title">Registrar estudiante</h2>
       <input type="text" id="nombre" placeholder="Nombre del estudiante" />
       <input type="email" id="correo" placeholder="Correo" />
       <input type="text" id="clase" placeholder="Clase" />
-      <button onclick="agregarEstudiante()">Agregar</button>
+      
+      <button id="btnAgregar" onclick="agregarEstudiante()">Agregar</button>
+      <button id="btnEditar" style="display:none">Guardar cambios</button>
+      <button id="btnCancelarEdicion" style="display:none">Cancelar edición</button>
     </section>
 
     <!-- Lista de estudiantes -->
@@ -44,5 +47,16 @@
   </div>
 
   <script src="js/dashboard.js"></script>
+
+  <script>
+    // Botón cancelar edición para restaurar formulario y botones
+    document.getElementById("btnCancelarEdicion").addEventListener("click", () => {
+      limpiarFormulario();
+      document.getElementById("form-title").textContent = "Registrar estudiante";
+      document.getElementById("btnAgregar").style.display = "inline";
+      document.getElementById("btnEditar").style.display = "none";
+      document.getElementById("btnCancelarEdicion").style.display = "none";
+    });
+  </script>
 </body>
 </html>
