--- a/dashboard.html
+++ b/dashboard.html
@@ -56,6 +56,7 @@
       document.getElementById("btnAgregar").style.display = "inline";
       document.getElementById("btnEditar").style.display = "none";
       document.getElementById("btnCancelarEdicion").style.display = "none";
+      document.getElementById("btnEditar").removeAttribute("data-id");
     });
   </script>
 </body>
