--- a/dashboard.html
+++ b/dashboard.html
@@ -46,6 +46,7 @@
     </section>
   </div>
 
+  <!-- Tu script con lógica debe definir las funciones y exponerlas al global -->
   <script src="js/dashboard.js"></script>
 
   <script>
